<resources>
    <string name="app_name">Pick Me</string>
    <string name="create_new_account">Create new Account</string>
    <string name="web_client_id">675313142627-6uh9ou6a0inkol7rdph3btvjtcg8lcda.apps.googleusercontent.com</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="title_activity_add_team">Add Team</string>
    <string name="input_your_team_name">Input Your Team Name</string>
    <string name="tell_us_about_this_team">Tell us About this team</string>
    <string name="invite_your_friends">Invite your Friends</string>
    <string name="create_my_team">Create My Team</string>
    <string name="title_activity_team_list">TeamList</string>
    <string name="title_activity_add_vote">AddVoteActivity</string>
    <string name="howdy_please_tell_us_about_your_new_vote">Howdy Please tell us about your new vote</string>
    <string name="what_is_your_vote_name">What is your vote name</string>
    <string name="describe_your_vote_purpose">Describe your vote purpose</string>
    <string name="tell_us_about_your_available_vote_options">Tell us about your available vote options</string>
    <string name="create_my_vote">Create My Vote</string>
    <string name="title_activity_vote_details_actiivity">Vote Details</string>
    <string name="open_discussion">Open Discussion</string>
    <string name="open_vote_result_details">Open Vote Result Details</string>
    <string name="member_who_already_vote">Member Who Already Vote</string>
    <string name="member_who_still_not_vote">Member who still not vote</string>
</resources>
