<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/loginBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo_pick_me"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/pickme_white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="16dp"
        card_view:cardBackgroundColor="@color/white"
        android:layout_centerInParent="true"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Log in"
                android:textAlignment="center"
                android:textSize="22sp"
                android:fontFamily="serif"
                android:textStyle="bold"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginText"
                android:layout_margin="16dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:hint="@string/enter_your_email"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailInput"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:hint="@string/enter_your_password"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimary"
                android:layout_margin="5dp"
                android:text="@string/create_new_account"
                android:clickable="true"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                card_view:cardCornerRadius="4dp"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>